# etl

./: README.md  README.rst  f.txt  file.txt  pyproject.toml  requirements.txt  testout.txt
src/etlapp/: __init__.py  etlapp.py  read.py  transform.py  write.py
tests/: test_etlapp.py
