[tool.poetry]
name = "etlapp"
version = "0.1.0"
description = ""
packages = [
    {include = "etlapp", from="./src"},
]
authors = ["codeshubham <shubhammank@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.2.2"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
etlapp = "etlapp.etlapp:run"